experiments/exp1/manifests_batch/batch_20/tenant_8/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exp1b-b20-t8-c2
  labels:
    tenant: exp1-batch
    batch_id: "20"
    tenant_idx: "8"
    complexity: "2"
